--- a/MyCity4Kids/MyCity4Kids/res/layout/add_multiple_collection_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_multiple_collection_item.xml
@@ -22,8 +22,7 @@
             android:layout_height="66dp"
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/desert" />
+            android:scaleType="centerCrop" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/articleVideoShortStoryIcon"
