--- a/MyCity4Kids/MyCity4Kids/res/layout/user_collection_items_list_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_collection_items_list_adapter.xml
@@ -22,8 +22,7 @@
                 android:id="@+id/articleImageView"
                 android:layout_width="130dp"
                 android:layout_height="@dimen/space_100"
-                android:scaleType="centerCrop"
-                android:src="@drawable/desert" />
+                android:scaleType="centerCrop" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/articleVideoShortStoryIcon"
