--- a/MyCity4Kids/MyCity4Kids/res/layout/choose_challenge_story_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/choose_challenge_story_layout.xml
@@ -11,7 +11,9 @@
         android:id="@+id/overlayView_choose_story_challenge"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="0dp"
         android:alpha="0.75"
         android:background="#121212"
         android:visibility="visible" />
