ConnectivityUtils + Kotlin upgrade errors

--- a/app/src/main/res/layout/activity_new_editor.xml
+++ b/app/src/main/res/layout/activity_new_editor.xml
@@ -107,7 +107,7 @@
 
     <fragment
         android:id="@+id/postEditor"
-        android:name="org.wordpress.android.editor.EditorFragment"
+        android:name="com.mycity4kids.editor.EditorFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar" />
