--- a/app/src/main/res/layout/newsletter_webview.xml
+++ b/app/src/main/res/layout/newsletter_webview.xml
@@ -36,7 +36,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <WebView
-        android:id="@+id/webview"
+        android:id="@+id/webview1"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
