--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_insta_handle_pop_up.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_insta_handle_pop_up.xml
@@ -10,9 +10,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/space_30"
         android:layout_marginEnd="@dimen/space_30"
-        app:layout_constraintTop_toTopOf="parent"
+        app:cardCornerRadius="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:cardCornerRadius="4dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -72,6 +72,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/space_16"
+                    android:background="#F1F1F1"
                     android:hint="e.g. ritu_19.."
                     android:textColor="@color/ad.author_name.text"
                     app:layout_constraintEnd_toEndOf="@id/instaHandleContainer"
