--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_insta_handle_pop_up.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_insta_handle_pop_up.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparent_black_90">
+    android:background="@color/transparent_black_90"
+    android:clickable="true"
+    android:focusable="true">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -35,7 +37,6 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:textAllCaps="true" />
 
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/instaHandleContainer"
                 android:layout_width="match_parent"
@@ -46,7 +47,6 @@
                 android:background="@drawable/dark_border_rounded_corner"
                 android:padding="12dp"
                 app:layout_constraintTop_toBottomOf="@id/headerTextView">
-
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/instagramImageView"
@@ -62,7 +62,7 @@
                     android:layout_width="1dp"
                     android:layout_height="0dp"
                     android:layout_marginStart="16dp"
-                    android:background="#E6E6E6"
+                    android:background="#DADADA"
                     app:layout_constraintBottom_toBottomOf="@id/instaHandleContainer"
                     app:layout_constraintLeft_toRightOf="@id/instagramImageView"
                     app:layout_constraintTop_toTopOf="@id/instaHandleContainer" />
@@ -81,7 +81,6 @@
                     app:layout_constraintTop_toTopOf="@id/instaHandleContainer" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/infoTextView"
                 android:layout_width="0dp"
@@ -97,27 +96,30 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/instaHandleContainer" />
 
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/confirmTextView"
+            <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_20"
-                android:background="@color/app_red"
-                android:paddingStart="50dp"
-                android:paddingTop="@dimen/space_10"
-                android:paddingEnd="@dimen/space_50"
-                android:paddingBottom="@dimen/space_10"
-                android:text="Confirm"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                app:fontName="oswald_regular.ttf"
+                app:cardCornerRadius="@dimen/space_4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/infoTextView"
-                app:textAllCaps="true" />
+                app:layout_constraintTop_toBottomOf="@id/infoTextView">
 
-
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/confirmTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/app_red"
+                    android:paddingStart="50dp"
+                    android:paddingTop="@dimen/space_10"
+                    android:paddingEnd="@dimen/space_50"
+                    android:paddingBottom="@dimen/space_10"
+                    android:text="Confirm"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    app:fontName="oswald_regular.ttf"
+                    app:textAllCaps="true" />
+            </androidx.cardview.widget.CardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
