--- a/MyCity4Kids/MyCity4Kids/res/layout/article_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_listing_item.xml
@@ -145,7 +145,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_toStartOf="@+id/shareArticleImageView"
                     android:padding="10dp"
-                    android:text="@string/edit"
+                    android:text="@string/user_article.published.edit"
                     android:textColor="@color/app_red"
                     android:textSize="16sp"
                     android:visibility="gone"
