--- a/MyCity4Kids/MyCity4Kids/res/layout/choose_video_category_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/choose_video_category_activity.xml
@@ -102,6 +102,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:nestedScrollingEnabled="true"
             android:orientation="horizontal"
             android:visibility="gone">
