--- a/MyCity4Kids/MyCity4Kids/res/layout/horizontal_recycler_view_video_challenge.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/horizontal_recycler_view_video_challenge.xml
@@ -3,31 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/space_20"
     android:layout_marginRight="12dp"
     android:layout_marginBottom="10dp"
     android:elevation="0dp"
     app:cardCornerRadius="4dp"
     app:cardElevation="0dp">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/white">
-
         <RelativeLayout
             android:id="@+id/topicContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical">
+            android:background="@color/white">
 
             <ImageView
                 android:id="@+id/tagImageView"
-                android:layout_width="236dp"
-                android:layout_height="160dp"
+                android:layout_width="246dp"
+                android:layout_height="180dp"
                 android:foreground="@drawable/gradient_in_video_challenge_image"
-                android:scaleType="centerCrop"
+                android:adjustViewBounds="true"
                 android:src="@drawable/default_article" />
 
             <com.mycity4kids.widget.CustomFontTextView
@@ -78,5 +71,4 @@
                 android:textSize="22sp"
                 app:fontName="oswald_regular.ttf" />
         </RelativeLayout>
-    </RelativeLayout>
 </androidx.cardview.widget.CardView>
