--- a/MyCity4Kids/MyCity4Kids/res/layout/shimmer_choose_short_story_category.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/shimmer_choose_short_story_category.xml
@@ -94,5 +94,31 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_30"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="110dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight=".5"
+            android:background="#e6cfcf" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="110dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_weight=".5"
+            android:background="#e6cfcf" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
