--- a/app/src/main/res/drawable/border_live_text_on_image_video_challenge.xml
+++ b/app/src/main/res/drawable/border_live_text_on_image_video_challenge.xml
@@ -2,14 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <stroke
     android:width="1dp"
-    android:color="#FFFF4444" />
+    android:color="#D03F56" />
 
-<solid android:color="#FFFF4444" />
+<solid android:color="#D03F56" />
 
 <padding
     android:bottom="1dp"
     android:left="1dp"
     android:right="1dp"
     android:top="1dp" />
-<corners android:radius="2dp" />
+<corners android:radius="4dp" />
 </shape>
