--- a/app/src/main/res/layout/challenge_detail_fragment_layout.xml
+++ b/app/src/main/res/layout/challenge_detail_fragment_layout.xml
@@ -73,7 +73,7 @@
                 android:background="#000000"
                 android:visibility="visible">
 
-                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+                <com.google.android.exoplayer2.ui.PlayerView
                     android:id="@+id/exoplayerChallengeDetailListing"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -266,7 +266,7 @@
                     android:background="#000000"
                     android:visibility="gone">
 
-                    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+                    <com.google.android.exoplayer2.ui.PlayerView
                         android:id="@+id/exoplayerChallengeDetailListingCoachMark"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
