--- a/app/src/main/res/layout/exoplayer_challenge_player_view_activity.xml
+++ b/app/src/main/res/layout/exoplayer_challenge_player_view_activity.xml
@@ -40,7 +40,7 @@
         android:layout_height="300dp"
         android:background="#000000">
 
-        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+        <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/exoPlayerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
